# bazel-sample-project

./: .bazelrc  BUILD.bazel  Makefile  README.md  WORKSPACE  cloudbuild.yaml  go.mod  go.sum  service.bzl  skaffold.yaml
echo/: BUILD.bazel  main.go
gateway/: BUILD.bazel  main.go
kube/services/echo/base/: deployment.yaml  service.yaml
kube/services/echo/overlays/production/: kustomization.yaml  patch.yaml
kube/services/gateway/base/: deployment.yaml  service.yaml
kube/services/gateway/overlays/production/: kustomization.yaml  patch.yaml  service.yaml
kube/skaffold/: kustomization.yaml
protobuf/: BUILD.bazel  message.pb.go  message.proto
