load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protobuf_proto",
    srcs = ["message.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protobuf_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/righ/go-sample-bazel-project/protobuf",
    proto = ":protobuf_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":protobuf_go_proto"],
    importpath = "github.com/righ/go-sample-bazel-project/protobuf",
    visibility = ["//visibility:public"],
)
